# raspberrypi_zenoh_redundant_mesh

./: LICENSE  README.md  batman_meshpoint.md  os_and_kernel.md  pixi.toml  pyproject.toml  wpa_config  wpa_supplicant.conf
elian_experiment/: mirror.py  pinger.py  stats.py
setup/: bat-hosts  batman_m1.bash  batman_m2.bash  batman_r1.bash  batman_r2.bash
utils/: pushssh.bash
zenoh_config/: client.json5  node1_router.json5  node2_router.json5  node_router.json5  router.json5
